--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -12,7 +12,7 @@
 @mixin simple-link($normal, $hover) {
   text-decoration: none;
   color: $normal;
-  transition: all #{ 400 * $durationMulti }ms ease-out;
+  transition: color #{ 400 * $durationMulti }ms ease-out;
   
   &:link {
     color: $normal;
