--- a/css/page.scss
+++ b/css/page.scss
@@ -23,6 +23,11 @@
   src: url(/fonts/helvetica/Helvetica.ttf);
 }
 
+@font-face {
+  font-family: Roboto;
+  src: url(/fonts/roboto/Roboto-Regular.ttf);
+}
+
 
 // Our variables
 $durationMulti: 1;
