--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -34,7 +34,7 @@ html, body {
   }
 
   .post-header {
-    font-family: Roboto;
+    font-family: Proxima Nova;
     border-bottom: thin solid hsla(0, 0%, 0%, 0.4);
 
     .post-title {
