--- a/css/page.scss
+++ b/css/page.scss
@@ -4,11 +4,6 @@
 @charset "utf-8";
 
 @font-face {
-  font-family: Quattrocento Sans;
-  src: url(/fonts/quattrocento/QuattrocentoSans-Regular.ttf);
-}
-
-@font-face {
   font-family: Lato;
   src: url(/fonts/lato/Lato-Regular.woff);
 }
@@ -20,12 +15,17 @@
 
 @font-face {
   font-family: Helvetica;
-  src: url(/fonts/helvetica/Helvetica.ttf);
+  src: url(/fonts/helvetica/Helvetica-Regular.ttf);
 }
 
 @font-face {
   font-family: Roboto;
   src: url(/fonts/roboto/Roboto-Regular.ttf);
+}
+
+@font-face {
+  font-family: Proxima Nova;
+  src: url(/fonts/proximanova/Proxima-Nova-Regular.ttf);
 }
 
 
