--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,6 +28,7 @@
       </ul>
       <div class="edge-button">
         <button class="flat-button tag-button">
+          {% include icon-tags.svg %}
         </button>
       </div>
     </aside>
