--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -174,7 +174,7 @@ $size: 70%;
     line-height: 1;
     margin-top: 0;
     padding: 1rem 3rem;
-    background-image: linear-gradient(100deg, #4776e6, #8e54e9 50%);
+    background-image: linear-gradient(100deg, #8e54e9, #4776e6 20%);
     border-top: thin solid hsla(0, 0%, 50%, 1);
     border-bottom: thin solid hsla(0, 0%, 50%, 1);
     -webkit-background-clip: text;
