--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,6 +19,7 @@
         <header class="post-header">
           <h1 class="post-title" itemprop="headline">{{ page.title }}</h1>
           <p class="post-meta">
+            <i class="far fa-clock"></i>
             <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %dth - %Y" }}</time>
             <span class="post-author" itemprop="author" itemscope itemtype="http://schema.org/Person">by: {{ site.author }}</span>
           </p>
