--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -37,6 +37,10 @@ html, body {
     font-family: Proxima Nova;
     border-bottom: thin solid hsla(0, 0%, 0%, 0.4);
 
+    * {
+      display: inline-block;
+    }
+
     .post-title {
       font-size: 1.8rem;
       color: hsla(0, 0%, 0%, 0.55);
