--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -55,7 +55,7 @@ $size: 70%;
 .tag-button {
   margin: 0 32px;
   z-index: 10;
-  
+
   svg {
     fill: #5f656f;
     stroke: #5f656f;
@@ -255,12 +255,14 @@ $count: 4;
   }
 }
 
+$nav-base-height: 0.5rem;
+
 %arrow-arm {
   content: '';
   display: inline-block;
   width: 1rem;
-  height: 0.25rem;
-  background-color: black;
+  height: $nav-base-height;
+  background-image: linear-gradient(var(--dir, 180deg), black, transparent);
 }
 
 #navigator {
@@ -277,17 +279,19 @@ $count: 4;
       &::before {
         transform: skewY(-45deg);
         @extend %arrow-arm;
+        --dir: 180deg;
       }
       &::after {
         transform: skewY(45deg);
         @extend %arrow-arm;
+        --dir: 180deg;
       }
     }
     &:nth-child(2) {
       display: inline-block;
-      width: 0.25rem;
-      height: 0.25rem;
-      background-color: black;
+      width: $nav-base-height;
+      height: $nav-base-height;
+      background-image: radial-gradient(black #{$nav-base-height/4}, transparent #{$nav-base-height/4});
       border-radius: 50%;
       pointer-events: none;
     }
@@ -295,10 +299,12 @@ $count: 4;
       &::before {
         transform: skewY(45deg);
         @extend %arrow-arm;
+        --dir: 0;
       }
       &::after {
         transform: skewY(-45deg);
         @extend %arrow-arm;
+        --dir: 0;
       }
     }
   }
