--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -35,7 +35,7 @@ html, body {
 
   .post-header {
     font-family: Proxima Nova;
-    border-bottom: thin solid hsla(0, 0%, 0%, 0.4);
+    border-bottom: thin dotted hsla(0, 0%, 0%, 0.4);
 
     * {
       display: inline-block;
@@ -56,7 +56,7 @@ html, body {
     font-family: Helvetica;
     font-size: 0.9rem;
     line-height: 2;
-    color: hsla(0, 0%, 0%, 0.75);
+    color: hsla(0, 0%, 0%, 0.65);
     text-indent: 1rem;
     padding-top: 0.5rem;
     padding-left: 0.5rem;
