--- a/_sass/shared.scss
+++ b/_sass/shared.scss
@@ -10,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background-color: #fff;
+  background: #fff;
 }
 
 div, nav, ol, ul, li, button, article, img, input {
