--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,30 +6,33 @@
 
   <body>
 
-    <header id="page-header">
-    </header>
-    <main id="page-main">
-      <nav>
-        <span><a href="/">Home</a></span>
-        <span><a href="#">Posts</a></span>
-        <span>this article</span>
-      </nav>
+    <article itemscope itemtype="http://schema.org/BlogPosting">
 
-      <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-        <header class="post-header">
-          <h1 class="post-title" itemprop="headline">{{ page.title }}</h1>
-          <p class="post-meta">
-            <i class="far fa-clock"></i>
-            <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %dth - %Y" }}</time>
-            <span class="post-author" itemprop="author" itemscope itemtype="http://schema.org/Person">by: {{ site.author }}</span>
-          </p>
-        </header>
+      <header id="page-header">
 
+        <h1 class="post-title" itemprop="headline">{{ page.title }}</h1>
+        <p class="post-meta">
+          <i class="far fa-clock"></i>
+          <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %dth - %Y" }}</time>
+          <span class="post-author" itemprop="author" itemscope itemtype="http://schema.org/Person">by: {{ site.author }}</span>
+        </p>
+
+      </header>
+
+      <div id="page-main">
+
+        <nav>
+          <span><a href="/">Home</a></span>
+          <span><a href="#">Posts</a></span>
+          <span>this article</span>
+        </nav>
         <div class="post-content" itemprop="articleBody">
           {{ content }}
         </div>
-      </article>
-    </main>
+
+      </div>
+
+    </article>
 
     <div id="search">
       {% include icon-search.svg %}
