--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -24,7 +24,7 @@ $stripe-color: hsla(0, 0%, 25%, 0.2);
     transform: skewX(10deg);
     width: 200%;
     height: 100%;
-    background-image: linear-gradient(-45deg, $stripe-color 5.56%, transparent 5.56%, transparent 50%, $stripe-color 50%, $stripe-color 55.56%, transparent 55.56%, transparent 100%);
+    background: linear-gradient(-45deg, $stripe-color 5.56%, transparent 5.56%, transparent 50%, $stripe-color 50%, $stripe-color 55.56%, transparent 55.56%, transparent 100%);
     background-size: 11px 11px;
     position: absolute;
     left: -50%;
@@ -69,7 +69,7 @@ $size: 70%;
   padding: 0 6rem;
   width: 30%;
   height: 12rem;
-  background-color: hsla(0, 0%, 50%, 0.1);
+  background: hsla(0, 0%, 50%, 0.1);
   border-top: thin solid hsla(0, 0%, 50%, 1);
   border-bottom: thin solid hsla(0, 0%, 50%, 1);
   position: absolute;
@@ -174,7 +174,7 @@ $size: 70%;
     line-height: 1;
     margin-top: 0;
     padding: 1rem 3rem;
-    background-image: linear-gradient(100deg, #8e54e9, #4776e6 20%);
+    background: linear-gradient(100deg, #8e54e9, #4776e6 20%);
     border-top: thin solid hsla(0, 0%, 50%, 1);
     border-bottom: thin solid hsla(0, 0%, 50%, 1);
     -webkit-background-clip: text;
@@ -237,7 +237,7 @@ $count: 4;
   margin: ($article-height / 2) 0;
   width: 100%;
   height: 7rem;
-  background-image: linear-gradient(-45deg, #4776e6, #8e54e9 50%);
+  background: linear-gradient(-45deg, #4776e6, #8e54e9 50%);
   border-radius: 0.5rem;
   position: relative;
   overflow: hidden;
@@ -262,7 +262,7 @@ $nav-base-height: 0.5rem;
   display: inline-block;
   width: 1rem;
   height: $nav-base-height;
-  background-image: linear-gradient(var(--dir, 180deg), black, transparent);
+  background: linear-gradient(var(--dir, 180deg), black, transparent);
 }
 
 #navigator {
@@ -291,7 +291,7 @@ $nav-base-height: 0.5rem;
       display: inline-block;
       width: $nav-base-height;
       height: $nav-base-height;
-      background-image: radial-gradient(black #{$nav-base-height/4}, transparent #{$nav-base-height/4});
+      background: radial-gradient(black #{$nav-base-height/4}, transparent #{$nav-base-height/4});
       border-radius: 50%;
       pointer-events: none;
     }
