--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -3,6 +3,7 @@ html, body {
   height:100%;
 }
 
+$line-color: hsla(0, 0%, 0%, 0.15);
 $left: 80%;
 $height: 4 * 16px;
 #page-header {
@@ -19,7 +20,7 @@ $height: 4 * 16px;
     margin-left: -$height - 1px - ($height / 2);
     width: 100%;
     height: 0;
-    border-bottom: thin solid hsla(0, 0%, 0%, 0.15);
+    border-bottom: thin solid $line-color;
     position: absolute;
     top: $height * 2;
   }
@@ -30,7 +31,7 @@ $height: 4 * 16px;
     margin-left: -$height * 2;
     width: $height * 2;
     height: $height * 2;
-    border-bottom: thin solid hsla(0, 0%, 0%, 0.15);
+    border-bottom: thin solid $line-color;
     position: absolute;
     top: -$height;
     left: 100%;
@@ -111,6 +112,28 @@ header {
     padding-left: 0.5rem;
     padding-right: 15%;
     height: 100vh;
+
+    .intro {
+      color: hsla(0, 0%, 0%, 0.62);
+      text-indent: 0;
+      padding-left: 0.5rem;
+    }
+
+    span {
+      color: hsla(0, 0%, 0%, 0.4);
+      margin-left: -1.5rem;
+      margin-right: 0.5rem;
+    }
+
+    h2 {
+      display: inline-block;
+      font-family: Roboto;
+      font-size: 1.3rem;
+      color: hsla(0, 0%, 0%, 0.5);
+      text-decoration: underline;
+      text-indent: 0;
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -119,8 +142,8 @@ header {
   fill: hsla(0, 0%, 0%, 0.45);
   width: 100% - $left;
   height: 4rem;
-  border-left: thin solid hsla(0, 0%, 0%, 0.15);
-  border-bottom: thin solid hsla(0, 0%, 0%, 0.15);
+  border-left: thin solid $line-color;
+  border-bottom: thin solid $line-color;
   position: fixed;
   top: 0%;
   left: $left;
@@ -162,10 +185,10 @@ header {
   &::before {
     content: '';
     display: inline-block;
-    margin-top: $height + 1px;
+    margin-top: $height;
     width: 0;
     height: 100%;
-    border-left: thin solid hsla(0, 0%, 0%, 0.15);
+    border-left: thin solid $line-color;
     position: absolute;
   }
 }
@@ -177,7 +200,7 @@ header {
     margin-top: -$height + 1px;
     width: $height * 2;
     height: $height * 2;
-    border-bottom: thin solid hsla(0, 0%, 0%, 0.15);
+    border-bottom: thin solid $line-color;
     position: absolute;
     transform-origin: 0 100%;
     transform: rotate3d(0, 0, 1, -45deg);
