--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,20 +39,20 @@
         <ul>
           <li class="menu-item">
             <a href="#">
-              <span><i class="far fa-newspaper"></i></span>
-              <span>Timeline</span>
+              <span>01.Timeline</span>
+              <span>Posts through out time.</span>
             </a>
           </li>
           <li class="menu-item">
             <a href="#">
-              <span><i class="far fa-edit"></i></span>
-              <span>Works</span>
+              <span>02.Works</span>
+              <span>Stuff I'm working on.</span>
             </a>
           </li>
           <li class="menu-item">
             <a href="#">
-              <span><i class="far fa-user"></i></span>
-              <span>About Me</span>
+              <span>03.About Me</span>
+              <span>Something tells me.</span>
             </a>
           </li>
         </ul>
