--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -7,6 +7,14 @@ body {
   width: 100%;
   height: 100%;
   position: absolute;
+
+  canvas {
+    filter: blur(0.3rem);
+    transform: scale3d(1.2, 1.2, 1);
+    position: absolute;
+    top: 20%;
+    left: 16%;
+  }
 }
 
 $left: 40%;
