--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,9 @@
 
   <body>
 
-    <div id="layer"></div>
+    <div id="layer">
+      <canvas></canvas>
+    </div>
 
     <div id="cover">
       <div class="stripes"></div>
