--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -14,7 +14,15 @@ body {
     position: absolute;
     top: 20%;
     left: 16%;
+    transition: -webkit-filter 1s, transform 1s, top 1s, left 1s;
   }
+}
+
+#layer .canvas--surface {
+  filter: blur(0);
+  transform: scale3d(1, 1, 1);
+  top: 10%;
+  left: 10%;
 }
 
 $left: 40%;
@@ -325,7 +333,7 @@ $count: 4;
 
     @for $i from 1 through 4 {
       &:nth-child(#{$i}) {
-        top: #{$article-height / 2 + 0.25rem + ($i - 1) * ($article-height + $article-height / 2)};
+        top: #{$article-height / 2 + ($i - 1) * ($article-height + $article-height / 2)};
       }
     }
 
