--- a/css/index.scss
+++ b/css/index.scss
@@ -22,6 +22,10 @@
 // Our variables
 $durationMulti: 1;
 
+$grad1: #8e54e9;
+$grad2: #4776e6;
+$decorate: hsla(190, 100%, 50%, 1);
+
 $elementSize: (
   menu-button-width: 30px,
   menu-button-height: 20px,
