--- a/_sass/index-menu.scss
+++ b/_sass/index-menu.scss
@@ -18,7 +18,7 @@ $stamp-height: 6rem;
     &::before {
       content: '';
       display: inline-block;
-      transform: skewy(45deg);
+      transform: skewY(45deg);
       width: $line-width;
       height: 100%;
       background: $line-color;
