--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -194,7 +194,7 @@ $size: 70%;
     margin-top: 0;
     padding: 0.5rem 0;
     width: 100%;
-    background: linear-gradient(100deg, #8e54e9, #4776e6 20%);
+    background: linear-gradient(100deg, $grad1, $grad2 20%);
     border-bottom: thin solid hsla(0, 0%, 50%, 1);
     position: absolute;
     left: -115%;
@@ -205,12 +205,24 @@ $size: 70%;
     transform: rotate3d(0, 0, 1, -90deg);
   }
 
+  &::before {
+    content: '';
+    display: inline-block;
+    transform-origin: 0% 0%;
+    transform: skewY(-45deg);
+    width: 0.25rem;
+    height: 15rem;
+    background: linear-gradient(hsla(0, 0%, 50%, 1), $decorate);
+    position: absolute;
+    left: -6.5%;
+  }
+
   .menu-item {
     display: block;
     margin: 5rem 0;
     border-radius: 0.75rem;
     transition: background 0.25s;
-    // background: linear-gradient(100deg, #4776e6, #8e54e9 20%);
+    // background: linear-gradient(100deg, $grad2, $grad1 20%);
     // -webkit-background-clip: text;
     // -webkit-text-fill-color: transparent;
 
@@ -284,7 +296,7 @@ $count: 4;
   margin: ($article-height / 2) 0;
   width: 100%;
   height: 7rem;
-  background: linear-gradient(-45deg, #4776e6, #8e54e9 50%);
+  background: linear-gradient(-45deg, $grad2, $grad1 50%);
   border-radius: 0.5rem;
   position: relative;
   opacity: 0.5;
@@ -305,7 +317,7 @@ $count: 4;
       content: '';
       display: none;
       width: 100%;
-      border-bottom: medium solid hsla(190, 100%, 50%, 1);
+      border-bottom: medium solid $decorate;
       position: absolute;
       top: 35%;
     }
@@ -316,7 +328,7 @@ $count: 4;
   }
 
   a {
-    @include simple-link(hsla(0, 0%, 0%, 1), hsla(190, 100%, 50%, 1));
+    @include simple-link(hsla(0, 0%, 0%, 1), $decorate);
   }
 }
 
