--- a/_sass/index-menu.scss
+++ b/_sass/index-menu.scss
@@ -8,7 +8,7 @@ $stamp-height: 6rem;
   width: 30%;
   height: 100%;
   position: absolute;
-  top: 100%;
+  transition: -webkit-filter 0.5s, top 0.5s, left 0.5s;
 
   li {
     width: 100%;
@@ -59,5 +59,15 @@ $stamp-height: 6rem;
       }
     }
   }
+}
+
+.timeline--bg {
+  top: 12%;
+  left: 12%;
+}
+
+.timeline--surface {
+  top: 10%;
+  left: 10%;
 }
 
