--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -6,23 +6,31 @@ body {
 #layer {
   width: 100%;
   height: 100%;
-  position: absolute;
-
-  canvas {
-    filter: blur(0.3rem);
-    transform: scale3d(1.2, 1.2, 1);
-    position: absolute;
-    top: 20%;
-    left: 16%;
-    transition: -webkit-filter 1s, transform 1s, top 1s, left 1s;
-  }
+  position: absolute;  
 }
 
-#layer .canvas--surface {
+canvas {
+  transform: scale3d(1.2, 1.2, 1);
+  position: absolute;
+  top: 20%;
+  left: 16%;
+  transition: -webkit-filter 0.5s;
+}
+
+.blur {
+  filter: blur(0.3rem);
+}
+
+.fade {
+  filter: blur(10rem);
+}
+
+.clear {
   filter: blur(0);
-  transform: scale3d(1, 1, 1);
-  top: 10%;
-  left: 10%;
+}
+
+.no-interact {
+  pointer-events: none;
 }
 
 $left: 40%;
@@ -85,8 +93,8 @@ $size: 70%;
   padding: 0 6rem;
   width: 30%;
   height: 12rem;
-  border-top: thin solid hsla(0, 0%, 50%, 1);
-  border-bottom: thin solid hsla(0, 0%, 50%, 1);
+  border-top: thin solid hsla(0, 0%, 75%, 1);
+  border-bottom: thin solid hsla(0, 0%, 75%, 1);
   position: absolute;
   top: 700px;
   left: -30%;
@@ -184,7 +192,8 @@ $size: 70%;
   position: absolute;
   top: 10%;
   left: -5%;
-  -webkit-transition: -webkit-filter 1s;
+  z-index: 15;
+  transition: -webkit-filter 1s;
   transform-origin: 50% 50%;
 
   h1 {
@@ -269,10 +278,6 @@ $size: 70%;
       }
     }
   }
-}
-
-.menu-wrapper--fade {
-  filter: blur(10rem);
 }
 
 .articles-wrapper {
