--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -100,13 +100,13 @@
               <span>Posts through out time.</span>
             </a>
           </li>
-          <li class="menu-item">
+          <li id="mi-works" class="menu-item">
             <a href="#">
               <span>02.Works</span>
               <span>Stuff I'm working on.</span>
             </a>
           </li>
-          <li class="menu-item">
+          <li id="mi-about" class="menu-item">
             <a href="#">
               <span>03.About Me</span>
               <span>Something tells me.</span>
@@ -157,6 +157,11 @@
         </li>
       {% endfor %}
     </ul>
+    <div id="works">
+    </div>
+    <p id="about" class="about--bg blur">
+      There is nothing to show here.
+    </p>
 
     <script src="/library/html2canvas.min.js"></script>
     <script src="/js/index.js"></script>
