--- a/_sass/index-menu.scss
+++ b/_sass/index-menu.scss
@@ -1,4 +1,5 @@
 
+// timeline
 $line-width: 0.25rem;
 $line-color: hsla(180, 80%, 45%, 1);
 $stamp-height: 6rem;
@@ -63,7 +64,7 @@ $stamp-height: 6rem;
 
 .timeline--bg {
   top: 12%;
-  left: 12%;
+  left: 15%;
 }
 
 .timeline--surface {
@@ -71,6 +72,7 @@ $stamp-height: 6rem;
   left: 10%;
 }
 
+// about
 #about {
   font-family: Proxima Nova;
   color: hsla(0, 0%, 0%, 0.55);
