--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -228,7 +228,7 @@ $size: 70%;
 
   .menu-item {
     display: block;
-    margin: 5rem 0;
+    padding: 2.5rem 0;
     border-radius: 0.75rem;
     transition: background 0.25s;
     // background: linear-gradient(100deg, $grad2, $grad1 20%);
@@ -237,6 +237,7 @@ $size: 70%;
 
     &:first-child {
       margin-top: 0.5rem;
+      padding-top: 0;
     }
     @for $i from 1 through 3 {
       &:nth-child(#{$i}) {
