--- a/_sass/index-menu.scss
+++ b/_sass/index-menu.scss
@@ -44,6 +44,7 @@ $stamp-height: 6rem;
     }
 
     p {
+      cursor: pointer;
       font-family: Proxima Nova;
       font-size: 1.1rem;
       margin: 0;
