--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -6,7 +6,7 @@ body {
 #layer {
   width: 100%;
   height: 100%;
-  position: absolute;  
+  position: absolute;
 }
 
 canvas {
@@ -203,7 +203,7 @@ $size: 70%;
     margin-top: 0;
     padding: 0.5rem 0;
     width: 100%;
-    background: linear-gradient(100deg, $grad1, $grad2 20%);
+    background: linear-gradient(180deg, $grad1, $grad2 100%);
     border-bottom: thin solid hsla(0, 0%, 50%, 1);
     position: absolute;
     left: -115%;
@@ -330,7 +330,16 @@ $count: 4;
   }
 
   a {
-    @include simple-link(hsla(0, 0%, 0%, 1), $decorate);
+    text-decoration: none;
+    color: hsla(0, 0%, 0%, 1);
+    transition: color 0.25s;
+
+    &:visited {
+      color: hsla(0, 0%, 0%, 1);
+    }
+    &:hover {
+      color: $decorate;
+    }
   }
 }
 
