--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -121,9 +121,9 @@
       <ul class="articles-widget-wrapper">
         {% for i in (1..4) %}
           <li class="articles-widget">
-            <menu>
+            <div class="btn-m">
               {% for i in (1..3) %}<span></span>{% endfor %}
-            </menu>
+            </div>
           </li>
         {% endfor %}
       </ul>
