--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -12,8 +12,8 @@ body {
 canvas {
   transform: scale3d(1.2, 1.2, 1);
   position: absolute;
-  top: 20%;
-  left: 16%;
+  top: 18%;
+  left: 18%;
   transition: -webkit-filter 0.5s;
 }
 
@@ -187,21 +187,24 @@ $size: 70%;
 }
 
 .menu-wrapper {
-  font-family: Lato;
+  font-family: Monda;
+  font-size: 0.9rem;
   width: 45%;
+  // width: 85%;
   position: absolute;
-  top: 10%;
+  top: 5%;
   left: -5%;
   z-index: 15;
   transition: -webkit-filter 1s;
   transform-origin: 50% 50%;
 
   h1 {
-    font-size: 1.9rem;
+    font-family: Monda;
+    font-size: 2.1rem;
     line-height: 1;
     text-align: right;
     margin-top: 0;
-    padding: 0.5rem 0;
+    padding: 0.5rem 0 0.4rem 0;
     width: 100%;
     background: linear-gradient(-45deg, $stripe-color 5.56%, transparent 5.56%, transparent 50%, $stripe-color 50%, $stripe-color 55.56%, transparent 55.56%, transparent 100%), linear-gradient(180deg, $grad1, $grad2 100%);
     background-size: 11px 11px, 100% 100%;
@@ -211,6 +214,7 @@ $size: 70%;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-mask: linear-gradient(-135deg, black 60%, transparent 80%);
+    opacity: 0.9;
     transform-origin: 100% 0%;
     transform: rotate3d(0, 0, 1, -90deg);
   }
@@ -222,7 +226,7 @@ $size: 70%;
     transform: skewY(-45deg);
     width: 0.25rem;
     height: 15rem;
-    background: linear-gradient(hsla(0, 0%, 50%, 1), $decorate);
+    background: linear-gradient(hsla(0, 0%, 60%, 1), $decorate);
     position: absolute;
     left: -6.5%;
   }
@@ -230,7 +234,7 @@ $size: 70%;
   .menu-item {
     cursor: default;
     display: block;
-    color: hsla(0, 0%, 0%, 0.55);
+    color: hsla(0, 0%, 0%, 0.45);
     padding: 2.5rem 0;
     border-radius: 0.75rem;
     transition: background 0.25s;
@@ -244,7 +248,7 @@ $size: 70%;
     }
     @for $i from 1 through 3 {
       &:nth-child(#{$i}) {
-        width: #{65% - $i * 5%};
+        width: #{75% - $i * 5%};
       }
     }
 
@@ -263,7 +267,7 @@ $size: 70%;
         display: block;
         padding-top: 0.5rem;
         padding-left: 1.4rem;
-        border-top: thin solid hsla(0, 0%, 0%, 0.55);
+        border-top: thin dotted hsla(0, 0%, 0%, 0.55);
 
         &::after {
           content: '--------';
@@ -300,11 +304,14 @@ $count: 4;
   width: 100%;
   height: 7rem;
   background: linear-gradient(-45deg, $grad2, $grad1 50%);
+  // border-top: thin solid transparent;
+  border-top: thin solid $decorate;
+  border-left: thin solid $decorate;
   border-radius: 0.5rem;
   position: relative;
   opacity: 0.5;
   -webkit-mask: linear-gradient(45deg, transparent 3%, black 3%);
-  -webkit-filter: url(#transparentShadow);
+  // -webkit-filter: url(#transparentShadow);
 
   &:nth-child(n+5) {
     display: none;
@@ -363,8 +370,10 @@ $count: 4;
 
     .btn-m {
       cursor: context-menu;
+      margin: 0.25rem;
       width: 2rem;
       height: 2rem;
+      position: relative;
 
       span {
         display: inline-block;
