--- a/css/index.scss
+++ b/css/index.scss
@@ -3,39 +3,7 @@
 ---
 @charset "utf-8";
 
-@font-face {
-  font-family: Lato;
-  src: url(/fonts/lato/Lato-Regular.woff);
-}
-
-@font-face {
-  font-family: Daville;
-  src: url(/fonts/daville/Daville-Condensed-Slanted.ttf);
-}
-
-@font-face {
-  font-family: Helvetica;
-  src: url(/fonts/helvetica/Helvetica-Regular.ttf);
-}
-
-@font-face {
-  font-family: Roboto;
-  src: url(/fonts/roboto/Roboto-Regular.ttf);
-}
-
-@font-face {
-  font-family: Proxima Nova;
-  src: url(/fonts/proximanova/Proxima-Nova-Regular.ttf);
-}
-
-@font-face {
-  font-family: Monda;
-  src: url(/fonts/monda/Monda-Regular.ttf);
-}
-
 // Our variables
-$durationMulti: 1;
-
 $grad1: #8e54e9;
 $grad2: #4776e6;
 $decorate: hsla(190, 100%, 50%, 1);
@@ -50,6 +18,7 @@ $elementSize: (
 
 // Import partials from `sass_dir` (default as `_sass`)
 @import
+  "fonts",
   "mixins",
   "functions",
   "shared",
