--- a/css/page.scss
+++ b/css/page.scss
@@ -3,38 +3,9 @@
 ---
 @charset "utf-8";
 
-@font-face {
-  font-family: Lato;
-  src: url(/fonts/lato/Lato-Regular.woff);
-}
-
-@font-face {
-  font-family: Daville;
-  src: url(/fonts/daville/Daville-Condensed-Slanted.ttf);
-}
-
-@font-face {
-  font-family: Helvetica;
-  src: url(/fonts/helvetica/Helvetica-Regular.ttf);
-}
-
-@font-face {
-  font-family: Roboto;
-  src: url(/fonts/roboto/Roboto-Regular.ttf);
-}
-
-@font-face {
-  font-family: Proxima Nova;
-  src: url(/fonts/proximanova/Proxima-Nova-Regular.ttf);
-}
-
-
-// Our variables
-$durationMulti: 1;
-
-
 // Import partials from `sass_dir` (default as `_sass`)
 @import
+  "fonts",
   "mixins",
   "functions",
   "shared",
