--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -151,8 +151,14 @@
         </li>
       {% endfor %}
     </ul>
-    <div id="works">
-    </div>
+    <!-- <ul id="works" class="works--bg blur"> -->
+    <ul id="works" class="works--surface">
+      <li class="project">
+        <h2>Interstellar Fishing</h2>
+      </li>
+      <li class="project"></li>
+      <li class="project"></li>
+    </ul>
     <p id="about" class="about--bg blur">
       There is nothing to show here.
     </p>
