--- a/_sass/index-menu.scss
+++ b/_sass/index-menu.scss
@@ -73,6 +73,58 @@ $stamp-height: 6rem;
   left: 10%;
 }
 
+// works
+#works {
+  list-style-type: none;
+  width: 25%;
+  position: absolute;
+
+  .project {
+    width: 100%;
+    height: 14rem;
+    position: relative;
+
+    &::before {
+      content: '';
+      display: inline-block;
+      width: 100%;
+      height: 0.125rem;
+      background: linear-gradient(90deg, transparent 0%, hsla(0, 0%, 30%, 1) 20%, hsla(0, 0%, 30%, 1) 80%, transparent 100%);
+      position: absolute;
+      top: 100%;
+      transform: rotate3d(0, 0, 1, -10deg);
+    }
+
+    h2 {
+      font-family: Proxima Nova;
+      color: hsla(0, 0%, 50%, 1);
+      position: relative;
+      top: 50%;
+    }
+
+    &:first-child {
+      &::before {
+        transform: rotate3d(0, 0, 1, 10deg);
+      }
+    }
+    &:last-child {
+      &::before {
+        transform: rotate3d(0, 0, 1, 10deg);
+      }
+    }
+  }
+}
+
+.works--bg {
+  top: 10%;
+  left: 15%;
+}
+
+.works--surface {
+  top: 5%;
+  left: 10%;
+}
+
 // about
 #about {
   font-family: Proxima Nova;
