--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -154,7 +154,13 @@
     <!-- <ul id="works" class="works--bg blur"> -->
     <ul id="works" class="works--surface">
       <li class="project">
-        <h2>Interstellar Fishing</h2>
+        <div class="project-title">
+          <h2>Interstellar Fishing</h2>
+          <p>Fishing among the planets.</p>
+        </div>
+        <div class="project-image">
+          <div class="overlay"></div>
+        </div>
       </li>
       <li class="project"></li>
       <li class="project"></li>
