--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -9,3 +9,12 @@
   }
 }
 
+@mixin overlay-more($color, $percentage) {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, $color 0%, transparent $percentage);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
