--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -151,8 +151,7 @@
         </li>
       {% endfor %}
     </ul>
-    <!-- <ul id="works" class="works--bg blur"> -->
-    <ul id="works" class="works--surface">
+    <ul id="works" class="works--bg blur">
       <li class="project">
         <div class="project-title">
           <h2>Interstellar Fishing</h2>
