--- a/_sass/index-menu.scss
+++ b/_sass/index-menu.scss
@@ -79,6 +79,7 @@ $project-height: 14rem;
   list-style-type: none;
   width: 25%;
   position: absolute;
+  transition: -webkit-filter 0.5s, top 0.5s, left 0.5s;
 
   .project {
     padding-bottom: 2rem;
