--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -74,12 +74,12 @@
         </button>
       </div>
       <ul class="tags">
-        <li class="tag">tag1</li>
-        <li class="tag">tag2</li>
-        <li class="tag">tag3</li>
-        <li class="tag">tag4</li>
-        <li class="tag">tag5</li>
-        <li class="tag">tag6</li>
+        <li><button class="flat-button tag">tag1</button></li>
+        <li><button class="flat-button tag">tag2</button></li>
+        <li><button class="flat-button tag">tag3</button></li>
+        <li><button class="flat-button tag">tag4</button></li>
+        <li><button class="flat-button tag">tag5</button></li>
+        <li><button class="flat-button tag">tag6</button></li>
       </ul>
       <div class="edge-button">
         <button class="flat-button tag-button">
