--- a/_includes/icon-github.html
+++ b/_includes/icon-github.html
@@ -1,1 +1,1 @@
-<a href="https://github.com/{{ include.username }}"><span>{% include icon-github.svg %}</span><span>{{ include.username }}</span></a>
+<a class="include-icon icon-github" href="https://github.com/zodiacaca/zodiacaca.github.io"><span>{% include icon-github.svg %}</span><span>{{ include.username }}</span></a>
