--- a/_sass/index-menu.scss
+++ b/_sass/index-menu.scss
@@ -119,7 +119,7 @@ $project-height: 14rem;
     .project-image {
       width: 100%;
       height: 80%;
-      background: url("https://www.w3schools.com/css/img_lights.jpg");
+      background: url("https://dailygalaxy.com/wp-content/uploads/2019/01/lead_720_405-1.jpg");
       border-radius: 1rem;
     }
 
