--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -98,6 +98,7 @@ $size: 70%;
   padding: 0.5rem 6rem;
   width: 30%;
   height: 12rem;
+  background: white;
   border-top: thin dashed hsla(0, 0%, 65%, 1);
   border-bottom: thin dashed hsla(0, 0%, 65%, 1);
   position: absolute;
@@ -125,7 +126,7 @@ $size: 70%;
   top: 0.5rem;
   box-shadow: 0 0 0.5rem 0.3rem white inset;
   opacity: 0;
-  transition: top 0.5s, opacity 1s, box-shadow 0.5s;
+  transition: top 0.5s, opacity 1s, box-shadow 0.25s;
 
   &::before {
     content: '# ';
@@ -294,32 +295,50 @@ $size: 70%;
       }
     }
 
-    span {
-      &:first-child {
-        font-size: 1.5rem;
-        font-weight: bold;
+    .mi-title {
+      font-size: 1.5rem;
+      font-weight: bold;
 
-        &::after {
-          content: '>>';
-          float: right;
-        }
+      &::after {
+        content: '>>';
+        float: right;
       }
+    }
 
-      &:last-child {
-        display: block;
-        padding-top: 0.5rem;
-        padding-left: 1.4rem;
-        border-top: thin dotted hsla(0, 0%, 0%, 0.55);
+    .mi-describe {
+      display: block;
+      padding-top: 0.5rem;
+      padding-left: 1.4rem;
+      border-top: thin dotted hsla(0, 0%, 0%, 0.55);
 
-        &::after {
-          content: '--------';
-          float: right;
-        }
+      &::after {
+        content: '--------';
+        float: right;
       }
     }
 
     &:hover {
-      color: hsla(0, 0%, 0%, 0.9);
+      color: hsla(190, 100%, 50%, 0.6);
+    }
+  }
+}
+#project-info {
+  margin-top: -1rem;
+
+  .include-icon {
+    display: inline-block;
+    margin: 0.25rem;
+
+    svg {
+      width: auto;
+      height: 1.5rem;
+      opacity: 0.5;
+    }
+
+    span {
+      &:last-child {
+        display: none;
+      }
     }
   }
 }
@@ -346,14 +365,12 @@ $count: 4;
   width: 100%;
   height: 7rem;
   background: linear-gradient(-45deg, $grad2, $grad1 50%);
-  // border-top: thin solid transparent;
   border-top: thin solid $decorate;
   border-left: thin solid $decorate;
   border-radius: 0.5rem;
   position: relative;
   opacity: 0.5;
   -webkit-mask: linear-gradient(45deg, transparent 1.5rem, black 1.5rem);
-  // -webkit-filter: url(#transparentShadow);
 
   &:nth-child(n+5) {
     display: none;
@@ -531,3 +548,4 @@ $nav-base-height: 0.5rem;
 .link--social:focus {
 	color: #5c5edc;
 }
+
