--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,7 +64,7 @@
         <ul id="articles">
           {% for post in site.posts %}
             <li class="article">
-              <h3 class="article-title"><a href="#">{{ post.title }}</a></h3>
+              <h3 class="article-title"><a href="/post.html">{{ post.title }}</a></h3>
             </li>
           {% endfor %}
         </ul>
