--- a/_includes/head.p1.html
+++ b/_includes/head.p1.html
@@ -6,6 +6,7 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.author }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
+  <link rel="icon" type="image/png" href="/icon.png">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.subpath | prepend: site.url }}">
 <!--  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.subpath | prepend: site.url }}">-->
 
