--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,7 +55,7 @@
             <span class="mi-describe">Something tells me.</span>
           </li>
         </ul>
-        <div id="project-info">
+        <div id="project-info" data-html2canvas-ignore="true">
           {% include icon-github.html username=site.github_username %}
         </div>
       </nav>
