--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -119,6 +119,7 @@ header {
     }
   }
 
+  $stripe-color: hsla(0, 0%, 25%, 0.2);
   .post-content {
     font-family: Helvetica;
     font-size: 0.9rem;
@@ -131,9 +132,12 @@ header {
     height: 100vh;
 
     .intro {
-      color: hsla(0, 0%, 0%, 0.62);
+      color: hsla(0, 0%, 0%, 0.5);
       text-indent: 0;
       padding-left: 0.5rem;
+      background-image: linear-gradient(-45deg, $stripe-color 5.56%, transparent 5.56%, transparent 50%, $stripe-color 50%, $stripe-color 55.56%, transparent 55.56%, transparent 100%);
+      // background-origin: border-box;
+      background-size: 8px 8px;
     }
 
     span {
