--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -77,12 +77,13 @@ header {
     span {
       font-family: Lato;
       font-size: 0.9rem;
+      font-weight: bold;
 
       * {
         opacity: 0.9;
       }
 
-      $color: #4776e6;
+      $color: hsla(190, 100%, 50%, 0.5);
       a {
         &:link {
           color: $color;
@@ -131,9 +132,6 @@ header {
       color: hsla(0, 0%, 0%, 0.5);
       text-indent: 0;
       padding-left: 0.5rem;
-      background-image: linear-gradient(-45deg, $stripe-color 5.56%, transparent 5.56%, transparent 50%, $stripe-color 50%, $stripe-color 55.56%, transparent 55.56%, transparent 100%);
-      // background-origin: border-box;
-      background-size: 8px 8px;
     }
 
     span {
