--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -118,8 +118,9 @@ header {
 
   $stripe-color: hsla(0, 0%, 25%, 0.2);
   .post-content {
-    font-family: Helvetica;
-    font-size: 0.9rem;
+    font-family: Proxima Nova;
+    font-size: 0.92rem;
+    letter-spacing: 0.1px;
     line-height: 2;
     color: hsla(0, 0%, 0%, 0.6);
     text-indent: 1rem;
